--- a/config/database.yml
+++ b/config/database.yml
@@ -79,8 +79,13 @@ test:
 # Read https://guides.rubyonrails.org/configuring.html#configuring-a-database
 # for a full overview on how database connection configuration can be specified.
 #
+# production:
+#   <<: *default
+#   database: StudyLine_production
+#   username: StudyLine
+#   password: <%= ENV["STUDYLINE_DATABASE_PASSWORD"] %>
 production:
   <<: *default
-  database: StudyLine_production
-  username: StudyLine
-  password: <%= ENV["STUDYLINE_DATABASE_PASSWORD"] %>
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
